Voeg coole animatie toe & comprimeer bestand
De laatste 10 seconden hebben nu een coole animatie.
Ook heb ik een mp3 toegevoegd zodat een bestand van 10 seconden niet
langer 2mb groot is.

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,19 @@
   text-align: center;
 }
 
+.schalen{
+  animation: schaal 1s infinite;
+}
+
+@keyframes schaal {
+  from {
+    font-size: 1rem;
+  }
+  to {
+    font-size: 24rem;
+  }
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
